--- a/CSS/boardpage.css
+++ b/CSS/boardpage.css
@@ -76,7 +76,7 @@ body{
     position: absolute;
     bottom: 1%;
     left: 1%;
-    font-size: 100px;
+    font-size: 75px;
     font-weight: 40;
     letter-spacing: 7px;
 }
@@ -107,12 +107,15 @@ body{
     -2px -2px 5px inset rgba(255, 255, 255,1);
 }
 
-.listinputbutton:hover{
+.listinputbutton:hover, .darkmodebutton{
     cursor: pointer;
 }
 
 #openbutton{
     color: rgb(69, 255, 52);
+}
+#editbutton{
+    color: rgb(122, 51, 253);
 }
 #deletebutton{
     color: rgb(255, 55, 55);
